--- a/InClassAssignments.ipynb
+++ b/InClassAssignments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM2+Ia23xcqPzxcu1dmxNEM",
+      "authorship_tag": "ABX9TyOVdaTsdSiLuJVV0zXMwELG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,32 +29,33 @@
     {
       "cell_type": "code",
       "source": [
-        "1 pi = 3.14\n",
-        "2 radius = float(input('Please provide the radius:'))\n",
-        "3 height = float(input('Please provide the height:'))\n",
-        "4\n",
-        "5 area = 2 * pi * radius ** 2+2 * pi * radius * height\n",
-        "6\n",
-        "7 print(f'Area of cylinder: {area} sq. ft')"
+        "pi = 3.14\n",
+        "radius = float(input('Please provide the radius:'))\n",
+        "height = float(input('Please provide the height:'))\n",
+        "\n",
+        "area = 2 * pi * radius ** 2+2 * pi * radius * height\n",
+        "\n",
+        "print(f'Area of cylinder: {area} sq. ft')"
       ],
       "metadata": {
-        "id": "q_7cOCfufBNf"
+        "id": "q_7cOCfufBNf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1033c794-b104-45a8-adcc-491b93964bc8"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Please provide the radius: 5\n",
-        "\n",
-        "Please provide the height: 6\n",
-        "\n",
-        "Area of cylinder: 345.4 sq. ft"
-      ],
-      "metadata": {
-        "id": "mb35b3STBoDZ"
-      }
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please provide the radius:5\n",
+            "Please provide the height:6\n",
+            "Area of cylinder: 345.4 sq. ft\n"
+          ]
+        }
+      ]
     }
   ]
 }
