--- a/InClassAssignments.ipynb
+++ b/InClassAssignments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOVdaTsdSiLuJVV0zXMwELG",
+      "authorship_tag": "ABX9TyNYIGwzwJ9Ll+4KIfKcu84u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         },
         "outputId": "1033c794-b104-45a8-adcc-491b93964bc8"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -53,6 +53,81 @@
             "Please provide the radius:5\n",
             "Please provide the height:6\n",
             "Area of cylinder: 345.4 sq. ft\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for numberHours in range(1, 9):\n",
+        "  fee = 5 + 2.5 * numberHours\n",
+        "for numberHours in range(1, 9):\n",
+        "  fee = 5 + 2.5 * numberHours\n",
+        "  if fee < 10:\n",
+        "    fee = 10.0\n",
+        "  elif fee > 20:\n",
+        "    fee = 20.0\n",
+        "  print(numberHours, fee)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bLSljEEgaHf7",
+        "outputId": "d2759c66-fbeb-4be2-f5fe-d0d3e0186af2"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 10.0\n",
+            "2 10.0\n",
+            "3 12.5\n",
+            "4 15.0\n",
+            "5 17.5\n",
+            "6 20.0\n",
+            "7 20.0\n",
+            "8 20.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "\n",
+        "for adMoney in range (0, 201, 25):\n",
+        "  revenue = (20 + 2 * round((adMoney) ** .5) * 10)\n",
+        "  costs = 200 + adMoney\n",
+        "  profit = revenue - costs\n",
+        "  print (adMoney, profit)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Dx-Og_LCc7Xu",
+        "outputId": "62581fb1-f312-4383-a601-9d52534277ad"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 -180\n",
+            "25 -105\n",
+            "50 -90\n",
+            "75 -75\n",
+            "100 -80\n",
+            "125 -85\n",
+            "150 -90\n",
+            "175 -95\n",
+            "200 -100\n"
           ]
         }
       ]
