--- a/InClassAssignments.ipynb
+++ b/InClassAssignments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNYIGwzwJ9Ll+4KIfKcu84u",
+      "authorship_tag": "ABX9TyPXx7yYCO9JFQw64/X+kGU7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,7 +77,7 @@
         "id": "bLSljEEgaHf7",
         "outputId": "d2759c66-fbeb-4be2-f5fe-d0d3e0186af2"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,9 +111,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Dx-Og_LCc7Xu",
-        "outputId": "62581fb1-f312-4383-a601-9d52534277ad"
+        "outputId": "028c9b06-5c81-41f5-8ce1-1db678c582ce"
       },
-      "execution_count": 14,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,6 +131,83 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "while True:\n",
+        "  userNum1 = float(input(\"Enter the first number: \"))\n",
+        "  userOperator = str(input(\"Enter an operator: \"))\n",
+        "\n",
+        "  if userOperator == \"break\":\n",
+        "    print(\"Thanks for using our calculator!\")\n",
+        "\n",
+        "  userNum2 = float(input(\"Enter a second number: \"))\n",
+        "\n",
+        "  if userOperator == \"+\":\n",
+        "    answer = userNum1 + userNum2\n",
+        "  elif userOperator == \"-\":\n",
+        "    ansewer = userNum1 - userNum2\n",
+        "  elif userOperator == \"*\":\n",
+        "    answer = userNum1 * userNum2\n",
+        "  elif userOperator == \"/\":\n",
+        "    if userNum2 == 0:\n",
+        "      print(\"Can't divide by zero. Try again.\")\n",
+        "      continue\n",
+        "    answer = userNum1 / userNum2\n",
+        "  elif userOperator == \"//\":\n",
+        "    if userNum2 == 0:\n",
+        "      print(\"Can't divide by zero. Try again.\")\n",
+        "      continue\n",
+        "    answer = userNum1 // userNum2\n",
+        "  elif userOperator == \"%\":\n",
+        "    if userNum2 == 0:\n",
+        "      print(\"Can't divide by zero. Try again.\")\n",
+        "      continue\n",
+        "    answer = userNum1 % userNum2\n",
+        "  elif userOperator == \"**\":\n",
+        "    answer = userNum1 ** userNum2\n",
+        "  else:\n",
+        "    print('Invalid operator:', userOperator)\n",
+        "    continue\n",
+        "  print(answer)"
+      ],
+      "metadata": {
+        "id": "LgHxcKiNMtZc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "\n",
+        "play = input('Do you want to play a game (yes/no)? ').capitalize()\n",
+        "\n",
+        "while play == 'Yes':\n",
+        "  p1 = input('Player - Choose betweem rock/paper/scissors:').capitalize()\n",
+        "  p2 = random.choice(['rock','paper', 'scissors']).capitalize()\n",
+        "\n",
+        "  print(f'Player chose {p1}; Computer chose {p2}')\n",
+        "  if p1 == p2:\n",
+        "    print('Draw')\n",
+        "  elif ((p1 == 'rock' and p2 == 'scissors') or\n",
+        "        (p1 == 'scissors' and p2 == 'paper') or\n",
+        "        (p1 == 'paper' and p2 == 'rock')\n",
+        "        ):\n",
+        "    print('Player 1 wins!')\n",
+        "  else:\n",
+        "    print('Player 2 wins!')\n",
+        "\n",
+        "  play = input('Do you want to play another game (yes/no)? ').capitalize()\n",
+        "print('Good day...')"
+      ],
+      "metadata": {
+        "id": "O_dZRGO3HWFL"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
