--- a/InClassAssignments.ipynb
+++ b/InClassAssignments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPXx7yYCO9JFQw64/X+kGU7",
+      "authorship_tag": "ABX9TyPAgWNx4tboZYsrbxqAp3ou",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -113,7 +113,7 @@
         "id": "Dx-Og_LCc7Xu",
         "outputId": "028c9b06-5c81-41f5-8ce1-1db678c582ce"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,10 +173,25 @@
         "  print(answer)"
       ],
       "metadata": {
-        "id": "LgHxcKiNMtZc"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LgHxcKiNMtZc",
+        "outputId": "91a442b7-c841-462b-ce1d-21e8b8efc2c6"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "9.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -204,10 +219,120 @@
         "print('Good day...')"
       ],
       "metadata": {
-        "id": "O_dZRGO3HWFL"
+        "id": "O_dZRGO3HWFL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5839d479-f864-4a66-9d2e-796a81d70a86"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Do you want to play a game (yes/no)? no\n",
+            "Good day...\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "months = {}\n",
+        "\n",
+        "names = [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"]\n",
+        "numbers = [1,2,3,4,5,6,7,8,9,10,11,12];\n",
+        "\n",
+        "cntr = 0\n",
+        "for num in numbers:\n",
+        "  months[num] = names[num - 1]\n",
+        "  cntr += 1\n",
+        "months"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AE1JU8Pk2cnd",
+        "outputId": "09a61858-47dc-4a6c-db65-c49724731f62"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{1: 'Jan',\n",
+              " 2: 'Feb',\n",
+              " 3: 'Mar',\n",
+              " 4: 'Apr',\n",
+              " 5: 'May',\n",
+              " 6: 'Jun',\n",
+              " 7: 'Jul',\n",
+              " 8: 'Aug',\n",
+              " 9: 'Sep',\n",
+              " 10: 'Oct',\n",
+              " 11: 'Nov',\n",
+              " 12: 'Dec'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "counts = {}\n",
+        "\n",
+        "while len(counts) < 5:\n",
+        "  key = input('Give a string:')\n",
+        "\n",
+        "  if key not in counts:\n",
+        "    counts[key] = 1\n",
+        "  else:\n",
+        "    counts[key] += 1\n",
+        "\n",
+        "counts"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-rSvikL24E_a",
+        "outputId": "fc28d903-85bd-46b8-cefb-859ad29d0542"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Give a string:a\n",
+            "Give a string:b\n",
+            "Give a string:a\n",
+            "Give a string:c\n",
+            "Give a string:a\n",
+            "Give a string:b\n",
+            "Give a string:b\n",
+            "Give a string:d\n",
+            "Give a string:e\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'a': 3, 'b': 3, 'c': 1, 'd': 1, 'e': 1}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
     }
   ]
 }
