--- a/InClassAssignments.ipynb
+++ b/InClassAssignments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPAgWNx4tboZYsrbxqAp3ou",
+      "authorship_tag": "ABX9TyOrLTB3iyCascs/i+z2lW8E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -333,6 +333,29 @@
           "execution_count": 15
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calcFee(hours):\n",
+        "  fee = 5 + 2.5 * hours\n",
+        "  if fee < 10.0:\n",
+        "    fee = 10.0\n",
+        "  elif fee>= 20.0:\n",
+        "    fee = 20.0\n",
+        "  print(f'Fee: {fee}$')\n",
+        "\n",
+        "def main():\n",
+        "  numHours = int(input('Enter number of hours: '))\n",
+        "  calcFee(numHours)\n",
+        "\n",
+        "  main()"
+      ],
+      "metadata": {
+        "id": "buLD8Dufmihh"
+      },
+      "execution_count": 24,
+      "outputs": []
     }
   ]
 }
