--- a/InClassAssignments.ipynb
+++ b/InClassAssignments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOrLTB3iyCascs/i+z2lW8E",
+      "authorship_tag": "ABX9TyMelZGiIYjXkMovx5U7Fmm3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -173,25 +173,10 @@
         "  print(answer)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "LgHxcKiNMtZc",
-        "outputId": "91a442b7-c841-462b-ce1d-21e8b8efc2c6"
+        "id": "LgHxcKiNMtZc"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "9.0\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -303,7 +288,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-rSvikL24E_a",
-        "outputId": "fc28d903-85bd-46b8-cefb-859ad29d0542"
+        "outputId": "c6a842dd-9cc0-4115-b924-d92f316a1434"
       },
       "execution_count": null,
       "outputs": [
@@ -311,26 +296,22 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Give a string:a\n",
-            "Give a string:b\n",
-            "Give a string:a\n",
-            "Give a string:c\n",
-            "Give a string:a\n",
-            "Give a string:b\n",
-            "Give a string:b\n",
-            "Give a string:d\n",
-            "Give a string:e\n"
+            "Give a string:3\n",
+            "Give a string:2\n",
+            "Give a string:9\n",
+            "Give a string:6\n",
+            "Give a string:7\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{'a': 3, 'b': 3, 'c': 1, 'd': 1, 'e': 1}"
+              "{'3': 1, '2': 1, '9': 1, '6': 1, '7': 1}"
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 24
         }
       ]
     },
@@ -354,7 +335,111 @@
       "metadata": {
         "id": "buLD8Dufmihh"
       },
-      "execution_count": 24,
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def reverse (s) :\n",
+        "  if len(s) == 1:\n",
+        "    return s\n",
+        "  else:\n",
+        "    return s[-1] + reverse (s[1:-1]) +s[0]\n",
+        "    return reverse (s[1:]) + s [0]\n",
+        "    return s[-1] + reverse (s[:-1])\n",
+        "\n",
+        "  reverse('Hello')"
+      ],
+      "metadata": {
+        "id": "EVNK0GstizXt"
+      },
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calcFee(hours) :\n",
+        "  assert hours >= 0, \"The number of hourse should be non-negative...\"\n",
+        "  fee = 5+2.5 * hours\n",
+        "  if fee < 10:\n",
+        "    fee = 10.0\n",
+        "  elif fee > 20:\n",
+        "    fee = 20.0\n",
+        "  print (f'Fee: {fee}$')\n",
+        "\n",
+        "  def main():\n",
+        "    try:\n",
+        "      numHours = int (input('Enter number of hours: '))\n",
+        "      calcFee(numHours)\n",
+        "    except ValueError:\n",
+        "      print('Cannot cast to int().')\n",
+        "    #except:\n",
+        "    #  print('Unknown error...')\n",
+        "\n",
+        "  if __name__ == \"__main__\":\n",
+        "    main()"
+      ],
+      "metadata": {
+        "id": "tNBhUEtYj_D_"
+      },
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Greeting:\n",
+        "  def __init__(self, first, last) :\n",
+        "    self.first = first\n",
+        "    self.last = last\n",
+        "  def display(self, formal=False) :\n",
+        "    if formal :\n",
+        "      print(f'Hi {self.first} {self.last}')\n",
+        "    else:\n",
+        "      print(f'Hi {self.first}')\n",
+        "\n",
+        "  def __str__(self) :\n",
+        "    return \"{}, {}\" .format(self.first, self.last)\n",
+        "    return f'{self.first}, {self.last}'\n",
+        "    return str(self.first) + \", \" +str(self.last)\n",
+        "\n",
+        "  greeting = Greeting('Donald', 'Becker')\n",
+        "  greeting2 = Greeting('Bob', 'Dylan')\n",
+        "  greeting.display(formal=True)\n",
+        "  print(greeting)\n",
+        "  print(greeting2)"
+      ],
+      "metadata": {
+        "id": "5PoGf5u7nzSj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from os import name\n",
+        "class Student:\n",
+        "  def __init__(self, name, number):\n",
+        "    self.__name__ = name\n",
+        "    self.number = number\n",
+        "    self.__courses = []\n",
+        "\n",
+        "  def enroll(self,newCourse):\n",
+        "    if newCourse not in self.__courses:\n",
+        "      self.__courses.append(newCourse)\n",
+        "    else:\n",
+        "      print(f'You have already enrolled in {newCourse}')\n",
+        "\n",
+        "  def get_course(self) :\n",
+        "    return self.__courses"
+      ],
+      "metadata": {
+        "id": "GeEdJKO5rE3a"
+      },
+      "execution_count": 51,
       "outputs": []
     }
   ]
